--- a/war/static/styles/screen-susk-0.0.1-SNAPSHOT.css
+++ b/war/static/styles/screen-susk-0.0.1-SNAPSHOT.css
@@ -144,7 +144,7 @@ smallbutton{
 	position:relative; 
 	top:-.7em;
 }
-.popup, #newUnitTest, #newHandMarking, #comfirmPopup,#newAssessment,#testUnitTest,#updateUnitTest,#released, #newCompetition
+.popup, #newUnitTest, #newHandMarking, #comfirmPopup,#newAssessment,#testUnitTest,#updateUnitTest,#released, #newCompetition, #newArena
 	{
 	background-color: white;
 	border-radius: 10px 10px 10px 10px;
