Made mark batch nicer. With nice circular buttons.
Fixed error where students were getting duplicated.

--- a/war/static/styles/screen-susk-0.0.1-SNAPSHOT.css
+++ b/war/static/styles/screen-susk-0.0.1-SNAPSHOT.css
@@ -13,27 +13,30 @@
 
 .handMarkingStudent.didnotsubmit{
 	background-color: lightgray;
-	border-style: outset;
-	border-color: lightgray;
 	cursor: default;
+	border-style: solid;
+	border-color: white;
 }
 
 .handMarkingStudent.submitted{
-	background-color: red;
-	border-style: outset;
-	border-color: red;
+	background-color: #0C0;
+	border-style: solid;
+	border-color: white;
 }
 
 .handMarkingStudent.current{
-	border-color: yellow;
+	border-style: outset;
+	border-color: #0C0;
 }
 
 .handMarkingStudent{
 	width: 1em;
-	height: 2em;
+	height: 1em;
 	float: left;
 	margin: 1px;
 	cursor: pointer;
+	border-radius: 50%;
+    behavior: url(PIE.htc); /* remove if you don't care about IE8 */
 }
 
 /** susk-detail */
