* Changed the way compile errors are given to the user - duplicates are removed  * Fixed a bug preventing the assesmentResult percentage being calculated  * Changed unit test results to store the files compiled, the whole runtime output, whether there was a runtime error or not, and whether there was a cleanup error or not. Removed old "runtimeErrors" variable.  * Made unit tests store their main class name, in order to dynamically create build.xml  * Reading unit test results from file no longer reads error files. This will only occur when a test is run.  * Re-wrote unit test running code: now generates build.xml from a template, and test are run in the sandbox rather than in submission directory. The sandbox should then be cleared after each test.

--- a/war/static/styles/screen-susk-0.0.1-SNAPSHOT.css
+++ b/war/static/styles/screen-susk-0.0.1-SNAPSHOT.css
@@ -187,7 +187,7 @@ smallbutton{
 	position:relative; 
 	top:-.7em;
 }
-.popup, #newUnitTest, #newHandMarking, #comfirmPopup,#newAssessment,#testUnitTest,#updateUnitTest,#released, #newCompetition, #newArena
+.popup, #newUnitTest, #newHandMarking, #comfirmPopup,#newAssessment,#testUnitTest,#updateUnitTestCode,#released, #newCompetition, #newArena
 	{
 	background-color: white;
 	border-radius: 10px 10px 10px 10px;
