--- a/war/static/styles/screen-susk-0.0.1-SNAPSHOT.css
+++ b/war/static/styles/screen-susk-0.0.1-SNAPSHOT.css
@@ -80,6 +80,7 @@ a:not([href]) {
 div.boxCard, .box-shadow, div.unitTestResult {
 	box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.1),
 				0px 2px 10px 0px rgba(0, 0, 0, 0.1);
+	margin:4px;
 }
 div.boxCard {
 	padding: 0.6em;
@@ -127,6 +128,13 @@ div.tooHardDiv.selected, div.tooHardDiv:hover {
 	background-image: url("../images/too-hard-selected.png");
 }
 
+textarea.ratingComment {
+	width: 50vw;
+	height: 15vh;
+	min-width: 200px;
+	min-height: 100px;
+}
+
 .handMarkingStudent.didnotsubmit{
 	background-color: lightgray;
 	cursor: default;
@@ -164,6 +172,29 @@ div.tooHardDiv.selected, div.tooHardDiv:hover {
 	cursor: pointer;
 	border-radius: 50%;
     behavior: url(PIE.htc); /* remove if you don't care about IE8 */
+}
+
+/* conjunction release rule separation */
+div.conjunction {
+	padding-left: 0.2em;
+	font-size: 1.5em;
+	text-transform: uppercase;
+}
+
+/* Nested release rule highlighting */
+/* '>' selector necessary to add specificity */
+div.subRule.first {
+	border-left: 2px solid #f5af00;
+}
+div.first > div > div > div.subRule {
+	border-left: 2px solid red;
+}
+div.first > div > div > div.subRule > div > div > div.subRule {
+	border-left: 2px solid #12416c;
+}
+
+div.toDelete {
+	background-color: lightgray;
 }
 
 /** susk-detail */
