--- a/war/static/styles/screen-susk-0.0.1-SNAPSHOT.css
+++ b/war/static/styles/screen-susk-0.0.1-SNAPSHOT.css
@@ -3,7 +3,7 @@
 }
 
 .hidden {
-	visibility: hidden;
+	display:none;
 }
 
 div.optionset {
@@ -78,6 +78,54 @@ h1.compact,h2.compact,h3.compact,h4.compact,h5.compact,h6.compact {
 }
 .padded {
 	padding:0.5em;
+}
+
+table.alignCellsTop td {
+	vertical-align: top;
+}
+
+span.help {
+	background-image: url("../images/help.png");
+	cursor: pointer;
+	display: inline-block;
+	height: 16px;
+	width: 16px;
+}
+
+span.icon_toggle_plus, div.icon_toggle_plus {
+	background-image: url("../images/toggle_plus.png");
+	cursor: pointer;
+	display: inline-block;
+	height: 16px;
+	width: 16px;
+}
+span.icon_toggle_minus, div.icon_toggle_minus {
+	background-image: url("../images/toggle_minus.png");
+	cursor: pointer;
+	display: inline-block;
+	height: 16px;
+	width: 16px;
+}
+span.icon_delete, div.icon_delete {
+	background-image: url("../images/delete.png");
+	cursor: pointer;
+	display: inline-block;
+	height: 16px;
+	width: 16px;
+}
+span.icon_delete_confirm, div.icon_delete_confirm {
+	background-image: url("../images/delete_confirm.png");
+	cursor: pointer;
+	display: inline-block;
+	height: 16px;
+	width: 16px;
+}
+span.icon_undo, div.icon_undo {
+	background-image: url("../images/undo.png");
+	cursor: pointer;
+	display: inline-block;
+	height: 16px;
+	width: 16px;
 }
 
 div.boxCard, .box-shadow, div.unitTestResult {
