Added validation for new assessment form

--- a/war/static/styles/screen-susk-0.0.1-SNAPSHOT.css
+++ b/war/static/styles/screen-susk-0.0.1-SNAPSHOT.css
@@ -37,6 +37,10 @@ a:not([href]) {
 	overflow: auto;
 }
 
+[id$=".errors"] {
+	color: red;
+}
+
 h1.compact,h2.compact,h3.compact,h4.compact,h5.compact,h6.compact {
 	margin-top: 0px;
 }
