Fixed USYD logo not appearing correctly.

--- a/war/static/styles/screen-0.0.1-SNAPSHOT.css
+++ b/war/static/styles/screen-0.0.1-SNAPSHOT.css
@@ -208,8 +208,9 @@ ul.linked li {
 	right: .95em;
 	top: 1.57em;
 	text-align: right;
-/*	text-transform: uppercase;*/
+	text-transform: uppercase;
 	width: 100%;
+	margin: 0;
 }
 
 #head h1 #separator {
