Previous commit to make 0/0 marks display as "full marks" (green cell) in grade centre causes issues on other areas. Reverted the changes and re-applied the change to just the grade centre front-end. 0/0 still appears as 0% in other areas.

--- a/war/static/styles/screen-susk-0.0.1-SNAPSHOT.css
+++ b/war/static/styles/screen-susk-0.0.1-SNAPSHOT.css
@@ -431,14 +431,19 @@ pre {
 .gradeCentreMarkGood{
 	background-color: #1FCB4A; 
 }
-
 .gradeCentreMarkBad{
 	background-color: #FFFFFF; 
 }
-
 .gradeCentreMarkNoSub{
 	background-color: #FF7575; 
 
+}
+a.gc-link {
+	color: black;
+	display: block;
+	height: 100%;
+	text-decoration: none;
+	width: 100%;
 }
 
  /*
