--- a/war/static/styles/screen-susk-0.0.1-SNAPSHOT.css
+++ b/war/static/styles/screen-susk-0.0.1-SNAPSHOT.css
@@ -126,7 +126,7 @@ tr.spaceBelow td {
 }
 
 div.separated + div.separated {
-	border-top: 1px solid gray;
+	border-top: 1px solid lightgray;
 }
 p.compact {
 	line-height: normal;
