Fixes black box test console preview having scroll bars even when it doesn't need them.

--- a/war/static/styles/screen-susk-0.0.1-SNAPSHOT.css
+++ b/war/static/styles/screen-susk-0.0.1-SNAPSHOT.css
@@ -135,7 +135,7 @@ p.compact {
 div.consolePreview {
 	font-family: monospace;
 	white-space: pre-wrap;
-	overflow: scroll;
+	overflow: auto;
 	width: 400px;
 }
 
