Reskinned the admin page

--- a/war/static/styles/screen-0.0.1-SNAPSHOT.css
+++ b/war/static/styles/screen-0.0.1-SNAPSHOT.css
@@ -72,7 +72,7 @@ button.floating.plus {
 	vertical-align: top;
 }
 
-.part > .button-panel:not(:first-child) {
+.part .button-panel:not(:first-child) {
 	margin-top: 1em;
 }
 .button-panel > button {
